# elektron_sexp

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
files/: opamp.kicad_sch
src/: error.rs  lib.rs  library.rs  model.rs  parser.rs  pcb.rs  schema.rs  shape.rs  write.rs
