[package]
name = "elektron_sexp"
version = "0.1.0"
edition = "2021"
description = "Rust parser and models for Kicad Version."
licence = "GNU LESSER GENERAL PUBLIC LICENSE"

[lib]
name = "elektron_sexp"

# [profile.release]
# # or "z"
# opt-level = "s"
# lto = "fat"
# codegen-units = 1

[dependencies]
thiserror = "1.0.32"
lazy_static = "1.4.0"
regex = "1.6.0"
rust-fuzzy-search = "0.1.1"
ndarray = "0.15.4"
itertools = "0.10.3"
diff = "0.1.13"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] 
