[package]
name = "elektron_sexp"
version = "0.1.3"
edition = "2021"
description = "Rust parser and models for Kicad Version."
license = "MIT OR Apache-2.0"

[lib]
name = "elektron_sexp"

[dependencies]
thiserror = "1.0.37"
lazy_static = "1.4.0"
regex = "1.6.0"
ndarray = "0.15.6"
diff = "0.1.13"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] 
